Pis Made look good

--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,4 +1,6 @@
-<%= image_tag @pin.image.url %>
+  <div class="box panel panel-default">
+	<%= image_tag @pin.image.url %>
+  <div class="panel-body">
 
 <p>
   <strong>Description:</strong>
