--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -20,6 +20,10 @@
         <% end %>
       </div>
     </div>
-  <% end %>
+  <% end %>  
 </div>
+<div class="center">
+   <%= will_paginate @posts, renderer: BootstrapPagination::Rails %>
+</div>
+
 
