--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,5 @@
-<h1>About Us</h1>
-<p>We are Kvana Developers</p>
+<div class="jumbotron center">
+<h2>About Us</h2>
+	<p>We are Kvana Developers.</p>
+	<p> We are From Hyderabad,.India</p>
+</div>
