--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -2,20 +2,26 @@
 <div id="pins" class="transitions-enabled">
   <% @pins.each do |pin| %>
     <div class="box panel panel-default">
+		<p align="center">
+			<br>
+		 <strong>By : <%= pin.user.name if pin.user %></strong>
+		</p>
       <%= link_to image_tag(pin.image.url), pin %>
       <div class="panel-body">
+		  <p align="center">
         <%= pin.description %><br/>
-        <strong><%= pin.user.name if pin.user %></strong>
+       </p>
         <% if current_user && pin.user == current_user %>
-          <div class="actions">	 
+         <div class="actions">	 
 		   <%= link_to edit_pin_path(pin) do %>
-		                 <span class="glyphicon glyphicon-edit"></span>
-		                 Edit
-		               <% end %>
-		               <%= link_to pin, method: :delete, data: { confirm: 'Are you sure?' } do %>
-		                 <span class="glyphicon glyphicon-trash"></span>
-		                 Delete
-		               <% end %>
+		        <span class="glyphicon glyphicon-edit"></span>
+		        Edit
+		   <% end %>
+		    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
+		   <%= link_to pin, method: :delete, data: { confirm: 'Are you sure?' } do %>
+		        <span class="glyphicon glyphicon-trash"></span>
+		        Delete
+		 <% end %>
           </div>
         <% end %>
       </div>
