--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -17,7 +17,7 @@
 		        <span class="glyphicon glyphicon-edit"></span>
 		        Edit
 		   <% end %>
-		    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 
+		    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  
 		   <%= link_to pin, method: :delete, data: { confirm: 'Are you sure?' } do %>
 		        <span class="glyphicon glyphicon-trash"></span>
 		        Delete
