--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,8 +22,20 @@
 			                <span class="glyphicon glyphicon-plus"></span> New Pin
 			              <% end %>
 			    </li>
+				
+				
+				
 	  			<li><%= link_to "Account Settings", edit_user_registration_path %></li>
-	           <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+				
+				
+			    <li>
+			              <%= link_to destroy_user_session_path do %>
+			                <span class="glyphicon glyphicon-log-out"></span> Log out
+			              <% end %>
+			    </li>
+				
+				
+	      
 	 <% else %>
 	           <li><%= link_to "Sign in", new_user_session_path %></li>
 	 <% end %>
@@ -31,3 +43,5 @@
   </div><!-- /.navbar-collapse -->
   </div><!-- /.container --> 
 </nav>
+
+
